[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Operators/plus.png" type="Texture" id=1]
[ext_resource path="res://Levels/GenericLevel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Buttons/MovableButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Operators/equal.png" type="Texture" id=4]
[ext_resource path="res://Assets/Numbers/1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Numbers/2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Symbols/slash.png" type="Texture" id=7]
[ext_resource path="res://Levels/Level1/Level1.gd" type="Script" id=9]
[ext_resource path="res://Buttons/FadingLabel.tscn" type="PackedScene" id=10]

[node name="Level1" instance=ExtResource( 2 )]
script = ExtResource( 9 )

[node name="TextureRect" type="TextureRect" parent="." index="1"]
margin_left = 214.012
margin_top = 251.093
margin_right = 230.012
margin_bottom = 267.093
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="." index="2"]
margin_left = 261.687
margin_top = 247.914
margin_right = 277.687
margin_bottom = 263.914
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="." index="3"]
margin_left = 308.304
margin_top = 252.152
margin_right = 324.304
margin_bottom = 268.152
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect5" type="TextureRect" parent="." index="4"]
margin_left = 412.304
margin_top = 252.152
margin_right = 428.304
margin_bottom = 268.152
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="." index="5"]
margin_left = 357.039
margin_top = 251.093
margin_right = 373.039
margin_bottom = 267.093
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovableButton" parent="." index="6" instance=ExtResource( 3 )]
margin_left = 359.642
margin_top = 247.974
margin_right = 375.642
margin_bottom = 263.974
text = ExtResource( 7 )

[node name="FadingLabel" parent="." index="7" instance=ExtResource( 10 )]
margin_left = 133.078
margin_top = 78.1324
margin_right = 861.078
margin_bottom = 103.133
bbcode_text = "
[wave]Welcome to  [color=#CC0000]M[/color][color=#BC000F]a[/color][color=#AC001F]k[/color][color=#9C002F]e[/color][color=#8D003E] [/color][color=#7D004E]I[/color][color=#6D005E]t[/color][color=#5E006D] [/color][color=#4E007D]E[/color][color=#3E008D]Q[/color][color=#2F009C]U[/color][color=#1F00AC]A[/color][color=#0F00BC]L[/color] try solving these engaging and over-exaggerated puzzles[/wave]"
text = "
Welcome to  Make It EQUAL try solving these engaging and over-exaggerated puzzles"

[node name="FadingLabel2" parent="." index="8" instance=ExtResource( 10 )]
margin_left = 153.586
margin_top = 121.974
margin_right = 846.586
margin_bottom = 146.974
bbcode_text = "
[wave]For winning in this game you should make the equation inside the rectangle true[/wave]"
text = "
For winning in this game you should make the equation inside the rectangle true"

[node name="FadingLabel3" parent="." index="9" instance=ExtResource( 10 )]
margin_left = 123.673
margin_top = 395.073
margin_right = 512.673
margin_bottom = 420.073
bbcode_text = "
[wave]Tip: you can drag and drop [color=#0000ff]Blue color[/color] symbols[/wave]"
text = "
Tip: you can drag and drop Blue color symbols"

[node name="FadingLabel5" parent="." index="10" instance=ExtResource( 10 )]
margin_left = 169.0
margin_top = 431.873
margin_right = 488.0
margin_bottom = 465.873
bbcode_text = "
[wave]Just do it, it's not that hard...[/wave]"
text = "
Just do it, it's not that hard..."

[node name="FadingLabel6" parent="." index="11" instance=ExtResource( 10 )]
margin_left = 540.899
margin_top = 178.44
margin_right = 859.899
margin_bottom = 203.44
bbcode_text = "
[wave]*Sigh* outside the box...[/wave]"
text = "
*Sigh* outside the box..."

[node name="FadingLabel4" parent="." index="12" instance=ExtResource( 10 )]
margin_left = 124.436
margin_top = 477.182
margin_right = 509.436
margin_bottom = 513.182
bbcode_text = "
[wave]Wow, you did it, it was very unimpressive[/wave]"
text = "
Wow, you did it, it was very unimpressive"

[node name="Label" parent="." index="17"]
text = "SCREEN 1"
